--- a/todo-frontend/404.html
+++ b/todo-frontend/404.html
@@ -2,10 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="0;url=/#/" />
     <title>Redirecting...</title>
+    <script>
+      window.location.href = "/";
+    </script>
   </head>
   <body>
-    <p>If you are not redirected, <a href="/#/"></a>.</p>
+    <p>If you are not redirected, <a href="/">click here</a>.</p>
   </body>
 </html>
