--- a/todo-frontend/404.html
+++ b/todo-frontend/404.html
@@ -1,13 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <title>Redirecting...</title>
-    <script>
-      window.location.href = "/";
-    </script>
+    <meta http-equiv="refresh" content="0; URL=/" />
   </head>
-  <body>
-    <p>If you are not redirected, <a href="/">click here</a>.</p>
-  </body>
+  <body></body>
 </html>
